samples/_failures_safe/1761403822_c0de78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35dba71d.c: In function ‘main’:
./samples/SAFE/__tmp_35dba71d.c:162:9: error: expected expression at end of input
  162 |         if (src < 0 || src >= graph.num_nodes || dest <
      |         ^~
./samples/SAFE/__tmp_35dba71d.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35dba71d.c:162:9: error: expected declaration or statement at end of input
